package com.example.program.Model;

public interface Entity {
    public String toString();
    public  void PrintEntity();
    public boolean isEmpty();
}
